# VerdictEnv

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  LICENSE  README.md  VerdictEnv_Colab.ipynb  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: __init__.py  app.py  environment.py  requirements.txt
